Initial commit: Three-tier application on AWS EKS

--- a/Kubernetes-Manifests-file/Database/pv.yaml
+++ b/Kubernetes-Manifests-file/Database/pv.yaml
@@ -2,12 +2,25 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: mongo-pv
-  namespace: three-tier
 spec:
-  capacity: 
+  capacity:
     storage: 1Gi
-  volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: ""
   hostPath:
-    path: /data/db
+    path: /mnt/mongo-data
+
+
+
+
+
+
+
+
+
+
+
+
+
